# AppProps

./: .gitignore  LICENSE  README.md  pyproject.toml
src/app_props/: __init__.py  app_props.py
tests/: test_app_props.py
tests/mocks/: configuration.yml
