[tool.poetry]
name = "appprops"
version = "1.0.0"
description = "Utility to retrieve properties from a configuration yaml file"
authors = ["Erik Shagdar <erik.shagdar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
